deploy new version auth page

--- a/public/index.html
+++ b/public/index.html
@@ -12,11 +12,14 @@
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!-- <link rel="manifest" href="%PUBLIC_URL%/manifest.json" /> -->
 
-    <!-- Google Fonts -->
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
-    <!-- Google Fonts / -->
+    <!-- Fonts -->
+      <!-- Inter Google Fonts -->
+      <link rel="preconnect" href="https://fonts.googleapis.com">
+      <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+      <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600&display=swap" rel="stylesheet">
+      <!-- SF Pro Display -->
+      <link href="http://fonts.cdnfonts.com/css/sf-pro-display" rel="stylesheet">
+    <!-- Fonts / -->
     
     <title>React App</title>
   </head>
