--- a/public/index.html
+++ b/public/index.html
@@ -13,12 +13,16 @@
     <!-- <link rel="manifest" href="%PUBLIC_URL%/manifest.json" /> -->
 
     <!-- Fonts -->
-      <!-- Inter Google Fonts -->
-      <link rel="preconnect" href="https://fonts.googleapis.com">
-      <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-      <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600&display=swap" rel="stylesheet">
-      <!-- SF Pro Display -->
-      <link href="http://fonts.cdnfonts.com/css/sf-pro-display" rel="stylesheet">
+    <!-- Inter Google Fonts -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600&display=swap" rel="stylesheet">
+    <!-- SF Pro Display -->
+    <link href="http://fonts.cdnfonts.com/css/sf-pro-display" rel="stylesheet">
+    <!-- Roboto -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap" rel="stylesheet">
     <!-- Fonts / -->
     
     <title>React App</title>
