--- a/public/index.html
+++ b/public/index.html
@@ -25,7 +25,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap" rel="stylesheet">
     <!-- Fonts / -->
     
-    <title>React App</title>
+    <title>Pinagora</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
